--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,9 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/archive">Archive</a>
+            <a href="https://github.com/sksq96">GitHub</a>
+            <a href="{{ site.baseurl }}/resources/resume.pdf">Resume</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
