--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <!-- <a href="{{ site.baseurl }}/">Blog</a> -->
             <a href="{{ site.baseurl }}/archive">Archive</a>
             <a href="https://github.com/sksq96">GitHub</a>
             <a href="{{ site.baseurl }}/resources/resume.pdf">Resume</a>
@@ -41,14 +41,14 @@
       {{ content }}
     </div>
 
-    <div class="wrapper-footer">
+<!--     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}
         </footer>
       </div>
     </div>
-
+ -->
     {% include analytics.html %}
   </body>
 </html>
